--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                       О нас
                     </a>
                   </li>
-                  <li class="header__menu-item">
+                  <li  class="header__menu-item">
                     <a class="header__menu-list-item-link" href="#section-gallery">
                       Галерея
                     </a>
@@ -521,125 +521,125 @@
                     <path d="M33.3333 26.6667L25 18.3333L16.6667 26.6667" stroke="black" />
                   </svg>
                 </button>
-                <div class="section-catalog__accordion-content ac-panel ac">
+                <div tabindex="1" class="section-catalog__accordion-content ac-panel ac">
                     <ul class="list-reset section-catalog__content-accordion-list">
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Бенедетто ди&nbsp;Биндо
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Бергоньоне, Амброджо
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Биссоло, Франческо
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Больтраффио, Джованни
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Бонсиньори, Франческо
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Боттичини, Рафаэлло
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Брамантино
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Бреа, Людовико
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Бьяджо д&rsquo;Антонио Туччи
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Веккьетта
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Андреа Верроккьо
                         </a>
                       </li>
                       <li>
-                        <a data-path="one" class="section-catalog__list-item section-catalog__list-item_active">
+                        <a tabindex="1" data-path="one" class="section-catalog__list-item section-catalog__list-item_active">
                           Доменико Гирландайо
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Беноццо Гоццоли
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Граначчи, Франческо
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Грегорио ди&nbsp;Чекко
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Джованни да&nbsp;Удине
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Джованни ди&nbsp;Паоло
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Джорджоне
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Парентино, Бернардо
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Пезеллино
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Пьетро Перуджино
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Пьетро Перуджино
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Пизанелло
                         </a>
                       </li>
                       <li>
-                        <a class="section-catalog__list-item" data-path="two">
+                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
                           Пинтуриккьо
                         </a>
                       </li>
