--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <script src="js/index.js" defer></script>
 </head>
 <body>
-  <div class="top-wrapper">
-    <header class="top-wrapper__header header">
+  <div>
+    <header class="header">
       <div class="header__menu-top">
         <div class="container header__container-top">
           <a class="header__image">
@@ -34,32 +34,32 @@
               <nav class="header__menu">
                 <ul class="list-reset header__menu-top-list">
                   <li class="header__menu-item">
-                    <a class="header__menu-list-item-link" href="#section-about">
+                    <a class="header__menu-list-item-link focus-reset" href="#section-about">
                       О нас
                     </a>
                   </li>
-                  <li  class="header__menu-item">
-                    <a class="header__menu-list-item-link" href="#section-gallery">
+                  <li class="header__menu-item">
+                    <a class="header__menu-list-item-link focus-reset" href="#section-gallery">
                       Галерея
                     </a>
                   </li>
                   <li class="header__menu-item">
-                    <a class="header__menu-list-item-link" href="#section-catalog">
+                    <a class="header__menu-list-item-link focus-reset" href="#section-catalog">
                       Каталог
                     </a>
                   </li>
                   <li class="header__menu-item">
-                    <a class="header__menu-list-item-link" href="#section-events">
+                    <a class="header__menu-list-item-link focus-reset" href="#section-events">
                       События
                     </a>
                   </li>
                   <li class="header__menu-item">
-                    <a class="header__menu-list-item-link" href="#section-projects">
+                    <a class="header__menu-list-item-link focus-reset" href="#section-projects">
                       Проекты
                     </a>
                   </li>
                   <li class="header__menu-item">
-                    <a class="header__menu-list-item-link" href="#section-feedback">
+                    <a class="header__menu-list-item-link focus-reset" href="#section-feedback">
                       Контакты
                     </a>
                   </li>
@@ -80,7 +80,7 @@
               <span></span>
             </button>
           </div>
-          <button aria-label="Войти" class="btn-reset header__menu-top-login" type="button">
+          <button aria-label="Войти" class="btn-reset header__menu-top-login focus-reset" type="button">
             <svg class="header__menu-login-image" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.12056 9.09278L6.13889 10.1111L9.75 6.5L6.13889 2.88889L5.12056 3.90722L6.98389 5.77778H0V7.22222H6.98389L5.12056 9.09278ZM11.5556 0H1.44444C0.642778 0 0 0.65 0 1.44444V4.33333H1.44444V1.44444H11.5556V11.5556H1.44444V8.66667H0V11.5556C0 12.35 0.642778 13 1.44444 13H11.5556C12.35 13 13 12.35 13 11.5556V1.44444C13 0.65 12.35 0 11.5556 0Z" fill="white"/>
             </svg>
@@ -117,7 +117,7 @@
         <div class="container header__container-bottom">
           <ul class="list-reset header__menu-list">
             <li class="header__menu-list-item">
-              <button aria-label="Реализм" class="btn-reset header__menu-list-item-btn">
+              <button aria-label="Реализм" class="btn-reset header__menu-list-item-btn focus-reset">
                 <span class="header__item">
                   Реализм
                 </span>
@@ -163,7 +163,7 @@
               </div>
             </li>
             <li class="header__menu-list-item">
-              <button aria-label="Импрессионизм" class="btn-reset header__menu-list-item-btn">
+              <button aria-label="Импрессионизм" class="btn-reset header__menu-list-item-btn focus-reset">
                 <span class="header__item">
                   Импрессионизм
                 </span>
@@ -199,7 +199,7 @@
               </div>
             </li>
             <li class="header__menu-list-item">
-              <button aria-label="Постимпрессионизм" class="btn-reset header__menu-list-item-btn">
+              <button aria-label="Постимпрессионизм" class="btn-reset header__menu-list-item-btn focus-reset">
                 <span class="header__item">
                   Постимпрессионизм
                 </span>
@@ -235,7 +235,7 @@
               </div>
             </li>
             <li class="header__menu-list-item">
-              <button aria-label="Авангард" class="btn-reset header__menu-list-item-btn">
+              <button aria-label="Авангард" class="btn-reset header__menu-list-item-btn focus-reset">
                 <span class="header__item">
                   Авангард
                 </span>
@@ -271,7 +271,7 @@
               </div>
             </li>
             <li class="header__menu-list-item">
-              <button aria-label="Футуризм" class="btn-reset header__menu-list-item-btn">
+              <button aria-label="Футуризм" class="btn-reset header__menu-list-item-btn focus-reset">
                 <span class="header__item">
                   Футуризм 
                 </span>
@@ -321,34 +321,39 @@
         </div>
       </div>
     </header>
-    <div class="top-wrapper__hero section-hero">
-      <div class="container section-hero__container">
-        <h1 class="title-reset section-hero__heading-official">
-          Blanchard - художественная галерея
-        </h1>
-        <h2 class="title-reset section-hero__heading">
-          Прикоснитесь к&nbsp;прекрасному
-        </h2>
-        <p class="text-reset section-hero__text">
-          Мы&nbsp;вынуждены отталкиваться от&nbsp;того, что реализация намеченных плановых заданий создаёт предпосылки для новых предложений.
-        </p>
-        <a class="section-hero__button" aria-label="Подписаться на рассылку" href="#">
-          Подписаться на&nbsp;рассылку
-        </a>
-      </div>
-    </div>
-    <div class="slider">
-      <div class="js-hero-swiper slider__container slider__wrapper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide slider__slide slider__slide-one"></div>
-          <div class="swiper-slide slider__slide slider__slide-two"></div>
-          <div class="swiper-slide slider__slide slider__slide-three"></div>
-        </div>
-      </div>
-    </div>
   </div>
   
   <main>
+    <div class="top-wrapper">
+      <section class="section-hero">
+        <div class="top-wrapper__hero">
+          <div class="container section-hero__container">
+            <h1 class="title-reset section-hero__heading-official">
+              Blanchard - художественная галерея
+            </h1>
+            <h2 class="title-reset section-hero__heading">
+              Прикоснитесь к&nbsp;прекрасному
+            </h2>
+            <p class="text-reset section-hero__text">
+              Мы&nbsp;вынуждены отталкиваться от&nbsp;того, что реализация намеченных плановых заданий создаёт предпосылки для новых предложений.
+            </p>
+            <a class="section-hero__button" aria-label="Подписаться на рассылку" href="#">
+              Подписаться на&nbsp;рассылку
+            </a>
+          </div>
+        </div>
+      </section>
+      <div class="slider">
+        <div class="js-hero-swiper slider__container slider__wrapper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide slider__slide slider__slide-one"></div>
+            <div class="swiper-slide slider__slide slider__slide-two"></div>
+            <div class="swiper-slide slider__slide slider__slide-three"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <section id="section-about" class="section-offset section-about">
       <div class="container section-about__container">
         <div class="section-about__content">
@@ -508,7 +513,7 @@
             <ul class="list-reset section-catalog__accordion-container">
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button class="section-catalog__accordion-heading ac-trigger">
-                  <span class="section-catalog__accordion-heading-text">
+                  <span class="section-catalog__accordion-heading-text focus-reset">
                     <span class="section-catalog__accordion-heading-text-wrap">
                       C&nbsp;1400 по&nbsp;1499&nbsp;гг.
                     </span>
@@ -648,7 +653,7 @@
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
-                  <span class="section-catalog__accordion-heading-text">
+                  <span class="section-catalog__accordion-heading-text focus-reset">
                     <span class="section-catalog__accordion-heading-text-wrap">
                       C&nbsp;1500 по&nbsp;1599&nbsp;гг.
                     </span>
@@ -674,7 +679,7 @@
                       <p class="text-reset section-catalog__content-accordion-development-description">
                         А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
                       </p>
-                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link">
+                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link focus-reset">
                         В галерею
                       </a>
                     </div>
@@ -683,7 +688,7 @@
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
-                  <span class="section-catalog__accordion-heading-text">
+                  <span class="section-catalog__accordion-heading-text focus-reset">
                     <span class="section-catalog__accordion-heading-text-wrap">
                       C&nbsp;1600 по&nbsp;1699&nbsp;гг.
                     </span>
@@ -717,7 +722,7 @@
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
-                  <span class="section-catalog__accordion-heading-text">
+                  <span class="section-catalog__accordion-heading-text focus-reset">
                     <span class="section-catalog__accordion-heading-text-wrap">
                       C&nbsp;1700 по&nbsp;1799&nbsp;гг.
                     </span>
@@ -751,7 +756,7 @@
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
-                  <span class="section-catalog__accordion-heading-text">
+                  <span class="section-catalog__accordion-heading-text focus-reset">
                     <span class="section-catalog__accordion-heading-text-wrap">
                       C&nbsp;1800 по&nbsp;1899&nbsp;гг.
                     </span>
@@ -785,7 +790,7 @@
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
-                  <span class="section-catalog__accordion-heading-text">
+                  <span class="section-catalog__accordion-heading-text focus-reset">
                     <span class="section-catalog__accordion-heading-text-wrap">
                       C&nbsp;1900 по&nbsp;1999&nbsp;гг.
                     </span>
@@ -819,7 +824,7 @@
               </li>
               <li class="section-catalog__accordion-list-item ac js-enabled">
                 <button aria-label="Открытие всплывающего списка" class="section-catalog__accordion-heading ac-trigger">
-                  <span class="section-catalog__accordion-heading-text">
+                  <span class="section-catalog__accordion-heading-text focus-reset">
                     <span class="section-catalog__accordion-heading-text-wrap">
                       C&nbsp;2000&nbsp;г.
                     </span>
@@ -884,7 +889,7 @@
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
-                  <a href="#" class="section-events__card-link">
+                  <a href="#" class="section-events__card-link focus-reset">
                     Подробнее
                   </a>
                 </div>
@@ -904,7 +909,7 @@
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
-                  <a href="#" class="section-events__card-link">
+                  <a href="#" class="section-events__card-link focus-reset">
                     Подробнее
                   </a>
                 </div>
@@ -924,7 +929,7 @@
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
-                  <a href="#" class="section-events__card-link">
+                  <a href="#" class="section-events__card-link focus-reset">
                     Подробнее
                   </a>
                 </div>
@@ -944,7 +949,7 @@
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
-                  <a href="#" class="section-events__card-link">
+                  <a href="#" class="section-events__card-link focus-reset">
                     Подробнее
                   </a>
                 </div>
@@ -964,7 +969,7 @@
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
-                  <a href="#" class="section-events__card-link">
+                  <a href="#" class="section-events__card-link focus-reset">
                     Подробнее
                   </a>
                 </div>
