--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
   
   <main>
     <div class="top-wrapper">
-      <section class="section-hero">
+      <section class="top-wrapper__hero section-hero">
         <div class="top-wrapper__hero">
           <div class="container section-hero__container">
             <h1 class="title-reset section-hero__heading-official">
