--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <p class="text-reset section-catalog__content-bottom-left-text-dev">
               Пока ничего... Зато мы&nbsp;точно знаем, что в&nbsp;галерее есть на&nbsp;что посмотреть!
             </p>
-            <a class="section-catalog__content-bottom-left-link-dev" href="#section-gallery">
+            <a class="section-catalog__content-bottom-left-link-dev focus-reset" href="#section-gallery">
               В галерею
             </a>
           </div>
@@ -529,122 +529,122 @@
                 <div tabindex="1" class="section-catalog__accordion-content ac-panel ac">
                     <ul class="list-reset section-catalog__content-accordion-list">
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бенедетто ди&nbsp;Биндо
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бергоньоне, Амброджо
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Биссоло, Франческо
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Больтраффио, Джованни
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бонсиньори, Франческо
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Боттичини, Рафаэлло
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Брамантино
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бреа, Людовико
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бьяджо д&rsquo;Антонио Туччи
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Веккьетта
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Андреа Верроккьо
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" data-path="one" class="section-catalog__list-item section-catalog__list-item_active">
+                        <a data-path="one" class="section-catalog__list-item focus-reset section-catalog__list-item focus-reset_active">
                           Доменико Гирландайо
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Беноццо Гоццоли
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Граначчи, Франческо
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Грегорио ди&nbsp;Чекко
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Джованни да&nbsp;Удине
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Джованни ди&nbsp;Паоло
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Джорджоне
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Парентино, Бернардо
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пезеллино
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пьетро Перуджино
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пьетро Перуджино
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пизанелло
                         </a>
                       </li>
                       <li>
-                        <a tabindex="1" class="section-catalog__list-item" data-path="two">
+                        <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пинтуриккьо
                         </a>
                       </li>
@@ -882,10 +882,10 @@
                     <span>с&nbsp;20&nbsp;марта по&nbsp;30&nbsp;апреля</span>
                   </div>
                   <h3 class="title-reset section-events__card-title">
-                    Книжная гравюра в&nbsp;живом восприятии
+                    Книжная гравюра в живом восприятии
                   </h3>
                   <p class="text-reset section-events__card-description">
-                    Один из&nbsp;ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и&nbsp;сын Ридольфо.
+                    Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо.
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
@@ -902,7 +902,7 @@
                     <span>24&nbsp;марта 19:00</span>
                   </div>
                   <h3 class="title-reset section-events__card-title">
-                    &laquo;Открытая дискуссия&raquo;. Дмитрий Петров и&nbsp;Сергей Ильин.
+                    «Открытая дискуссия». Дмитрий Петров и Сергей Ильин.
                   </h3>
                   <p class="text-reset section-events__card-description">
                     Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта.
@@ -922,10 +922,10 @@
                     <span>с&nbsp;31&nbsp;марта по&nbsp;21&nbsp;апреля</span>
                   </div>
                   <h3 class="title-reset section-events__card-title">
-                    Выставка &laquo;Формация 2020&raquo;
+                    Выставка «Формация 2020»
                   </h3>
                   <p class="text-reset section-events__card-description">
-                    Идейные соображения высшего порядка, а&nbsp;также современная методология разработки играет важную роль в&nbsp;формировании глубокомысленных рассуждений.
+                    Идейные соображения высшего порядка, а также современная методология разработки играет важную роль в формировании глубокомысленных рассуждений.
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
@@ -942,10 +942,10 @@
                     <span>с&nbsp;с&nbsp;8&nbsp;апреля по&nbsp;20&nbsp;мая</span>
                   </div>
                   <h3 class="title-reset section-events__card-title">
-                    Джон Винзор. Фотографии из&nbsp;серии &laquo;Метафора серебра&raquo;
+                    Джон Винзор. Фотографии из серии «Метафора серебра»
                   </h3>
                   <p class="text-reset section-events__card-description">
-                    Один из&nbsp;ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и&nbsp;сын Ридольфо.
+                    Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо.
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
@@ -965,7 +965,7 @@
                     XXIV Международная биеннале молодого искусства
                   </h3>
                   <p class="text-reset section-events__card-description">
-                    Внезапно, реплицированные с&nbsp;зарубежных источников, современные исследования.
+                    Внезапно, реплицированные с зарубежных источников, современные исследования.
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
@@ -1015,7 +1015,7 @@
             </svg>
           </button>
           предпосылок. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также представители современных социальных резервов призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть смешаны с&nbsp;не&nbsp;уникальными данными до&nbsp;степени совершенной неузнаваемости. Подробнее: 
-          <a class="section-projects__description-link" href="#" target="_blank">
+          <a class="section-projects__description-link focus-reset" href="#" target="_blank">
             blanchard-art.ru/projects
           </a>
         </p>
