--- a/index.html
+++ b/index.html
@@ -529,122 +529,122 @@
                 </button>
                 <div tabindex="1" class="section-catalog__accordion-content ac-panel ac">
                     <ul class="list-reset section-catalog__content-accordion-list">
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бенедетто ди&nbsp;Биндо
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бергоньоне, Амброджо
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Биссоло, Франческо
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Больтраффио, Джованни
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бонсиньори, Франческо
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Боттичини, Рафаэлло
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Брамантино
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бреа, Людовико
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Бьяджо д&rsquo;Антонио Туччи
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Веккьетта
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Андреа Верроккьо
                         </a>
                       </li>
-                      <li>
-                        <a data-path="one" class="section-catalog__list-item focus-reset section-catalog__list-item focus-reset_active">
+                      <li class="test">
+                        <a data-path="one" class="section-catalog__list-item focus-reset section-catalog__list-item focus-reset_active section-catalog__list-item_active" >
                           Доменико Гирландайо
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Беноццо Гоццоли
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Граначчи, Франческо
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Грегорио ди&nbsp;Чекко
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Джованни да&nbsp;Удине
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Джованни ди&nbsp;Паоло
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Джорджоне
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Парентино, Бернардо
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пезеллино
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пьетро Перуджино
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пьетро Перуджино
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пизанелло
                         </a>
                       </li>
-                      <li>
+                      <li class="test">
                         <a class="section-catalog__list-item focus-reset" data-path="two">
                           Пинтуриккьо
                         </a>
@@ -714,7 +714,7 @@
                       <p class="text-reset section-catalog__content-accordion-development-description">
                         А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
                       </p>
-                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link">
+                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link focus-reset">
                         В галерею
                       </a>
                     </div>
@@ -748,7 +748,7 @@
                       <p class="text-reset section-catalog__content-accordion-development-description">
                         А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
                       </p>
-                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link">
+                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link focus-reset">
                         В галерею
                       </a>
                     </div>
@@ -782,7 +782,7 @@
                       <p class="text-reset section-catalog__content-accordion-development-description">
                         А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
                       </p>
-                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link">
+                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link focus-reset">
                         В галерею
                       </a>
                     </div>
@@ -816,7 +816,7 @@
                       <p class="text-reset section-catalog__content-accordion-development-description">
                         А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
                       </p>
-                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link">
+                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link focus-reset">
                         В галерею
                       </a>
                     </div>
@@ -850,7 +850,7 @@
                       <p class="text-reset section-catalog__content-accordion-development-description">
                         А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
                       </p>
-                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link">
+                      <a href="#section-gallery" class="section-catalog__content-accordion-development-link focus-reset">
                         В галерею
                       </a>
                     </div>
