--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
                     Джон Винзор. Фотографии из серии «Метафора серебра»
                   </h3>
                   <p class="text-reset section-events__card-description">
-                    Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо.
+                    Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат&nbsp;Давид&nbsp;и&nbsp;сын&nbsp;Ридольфо.
                   </p>
                 </div>
                 <div class="section-events__link-wrap">
